--- a/第09课/ config/eurekaclient.yml
+++ b/第09课/ config/eurekaclient.yml
@@ -4,10 +4,10 @@ spring:
   application:
     name: eurekaclient
   rabbitmq:
-    host: localhost
+    host: 127.0.0.1
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
   zipkin:
     base-url: http://localhost:9411
     sender:
