--- a/第09课/ config/eurekaclient.yml
+++ b/第09课/ config/eurekaclient.yml
@@ -1,5 +1,24 @@
 server:
-  port: 8763
+  port: 8764
 spring:
   application:
     name: eurekaclient
+  profiles:
+    active: dev
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: admin
+  zipkin:
+    base-url: http://localhost:9411
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability : 1
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh,health,info,bus-refresh
