--- a/第09课/springcloud/config/src/main/resources/application.yml
+++ b/第09课/springcloud/config/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: admin
-    password: admin
+    username: guest
+    password: guest
     virtualHost: /
     publisherConfirms: true
 eureka:
