--- a/第09课/ config/eurekaclient.yml
+++ b/第09课/ config/eurekaclient.yml
@@ -6,8 +6,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: admin
-    password: admin
+    username: guest
+    password: guest
   zipkin:
     base-url: http://localhost:9411
     sender:
