--- a/第09课/ config/eurekaclient.yml
+++ b/第09课/ config/eurekaclient.yml
@@ -1,8 +1,8 @@
 server:
   port: 8764
 spring:
-  application:
-    name: eurekaclient 
+  # application:
+  #   name: eurekaclient 
   rabbitmq:
     host: 127.0.0.1
     port: 5672
